--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1,1 +1,270 @@
-/* No CSS *//*# sourceMappingURL=main.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Bangers&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Iceland&display=swap");
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
+}
+
+.main {
+  min-height: 100vh;
+  background: linear-gradient(315deg, #2a2a72 10%, #009ffd 74%);
+  -webkit-animation: gradient 15s ease infinite;
+          animation: gradient 15s ease infinite;
+  background-size: 300% 300%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+@-webkit-keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+header {
+  font-family: 'Bangers', Roboto, sans-serif;
+  padding: 1rem;
+  color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 4rem;
+  text-decoration: underline;
+}
+
+.game-container {
+  min-height: 100px;
+  padding: 0.5rem;
+  color: white;
+  font-family: 'Iceland', Roboto, sans-serif;
+}
+
+.game-container-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 1rem;
+}
+
+.game-container-header-playButton {
+  padding: 1rem;
+  font-family: 'Iceland', Roboto, sans-serif;
+  font-size: 1.2rem;
+  height: 1.5rem;
+  width: 5rem;
+  text-align: center;
+  border-radius: 5px;
+  background-color: lightgreen;
+  color: white;
+  border: 1px solid white;
+  cursor: pointer;
+  margin-left: 9rem;
+}
+
+.game-container-header-playButton:active {
+  -webkit-transform: scale(0.7);
+          transform: scale(0.7);
+}
+
+.game-container-header-playButton:hover {
+  background-color: greenyellow;
+}
+
+.game-container-header-winnerText {
+  font-size: 2rem;
+}
+
+.game-container-header-randomButton {
+  padding: 1rem;
+  font-family: 'Iceland', Roboto, sans-serif;
+  font-size: 1.2rem;
+  height: 1.5rem;
+  width: 5rem;
+  text-align: center;
+  border-radius: 5px;
+  background-color: lightgreen;
+  color: white;
+  border: 1px solid white;
+  cursor: pointer;
+  margin-right: 9rem;
+}
+
+.game-container-header-randomButton:active {
+  -webkit-transform: scale(0.7);
+          transform: scale(0.7);
+}
+
+.game-container-header-randomButton:hover {
+  background-color: greenyellow;
+}
+
+.game-container-grids {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 1rem;
+}
+
+.game-container-user {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.game-container-computer {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.game-container-title {
+  font-size: 2rem;
+}
+
+.game-container-playground {
+  display: -ms-grid;
+  display: grid;
+  width: 342px;
+  height: 342px;
+  -ms-grid-rows: 32px 1fr;
+  -ms-grid-columns: 32px 1fr;
+      grid-template: 32px 1fr / 32px 1fr;
+  margin-right: 20px;
+}
+
+.game-container-playground-row {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[10];
+      grid-template-columns: repeat(10, 1fr);
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2 / 3;
+}
+
+.game-container-playground-row-numbers {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 1.5rem;
+}
+
+.game-container-playground-column {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: (1fr)[10];
+      grid-template-rows: repeat(10, 1fr);
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1 / 2;
+  margin-right: 1rem;
+}
+
+.game-container-playground-column-letters {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 1.5rem;
+}
+
+.game-container-playground-game {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (32px)[10];
+      grid-template-columns: repeat(10, 32px);
+  -ms-grid-rows: (32px)[10];
+      grid-template-rows: repeat(10, 32px);
+  position: relative;
+  -webkit-box-shadow: 0 0 15px 5px lightblue;
+          box-shadow: 0 0 15px 5px lightblue;
+}
+
+.game-container-playground-game-cell {
+  border: solid 1px black;
+  cursor: crosshair;
+  background: lightblue;
+}
+
+.game-container-playground-game-cell:hover {
+  -webkit-transform: scale(1.02);
+          transform: scale(1.02);
+  border: solid 2px red;
+}
+/*# sourceMappingURL=main.css.map */
