--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -63,6 +63,10 @@ header {
           justify-content: center;
   font-size: 4rem;
   text-decoration: underline;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 .game-container {
@@ -97,6 +101,10 @@ header {
   color: white;
   border: 1px solid white;
   cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
   margin-left: 9rem;
 }
 
@@ -125,6 +133,10 @@ header {
   color: white;
   border: 1px solid white;
   cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
   margin-right: 9rem;
 }
 
@@ -148,6 +160,15 @@ header {
       -ms-flex-align: center;
           align-items: center;
   padding: 1rem;
+}
+
+@media (max-width: 740px) {
+  .game-container-grids {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 .game-container-user {
@@ -184,6 +205,7 @@ header {
 
 .game-container-title {
   font-size: 2rem;
+  margin-top: 1rem;
 }
 
 .game-container-playground {
@@ -259,12 +281,20 @@ header {
 .game-container-playground-game-cell {
   border: solid 1px black;
   cursor: crosshair;
-  background: lightblue;
+  background: #f1f3f5;
+  -webkit-transition: 100ms ease-in-out;
+  transition: 100ms ease-in-out;
 }
 
 .game-container-playground-game-cell:hover {
   -webkit-transform: scale(1.02);
           transform: scale(1.02);
-  border: solid 2px red;
+  background-color: #f84e4e;
+}
+
+.game-container-playground-game-cell-ship {
+  border: solid 1px blue;
+  cursor: crosshair;
+  background: blue;
 }
 /*# sourceMappingURL=main.css.map */
