--- a/src/sass/_gameboard.scss
+++ b/src/sass/_gameboard.scss
@@ -125,8 +125,8 @@
           background-color: #f84e4e;
         }
         &-ship {
-          cursor: crosshair;
-          background: blue;
+          border: 2px solid #00f;
+          background: rgba(0, 0, 255, 0.05);
         }
       }
     }
