--- a/src/sass/_gameboard.scss
+++ b/src/sass/_gameboard.scss
@@ -119,7 +119,7 @@
         border: 2px solid #00f;
         z-index: 2;
         position: absolute;
-        background: rgba(0, 0, 255, 0.4);
+        background: linear-gradient(315deg, #2a2a72 10%, #009ffd 74%);
       }
       &-cell {
         border: solid 1px black;
