--- a/src/sass/_gameboard.scss
+++ b/src/sass/_gameboard.scss
@@ -114,7 +114,7 @@
       grid-template-rows: repeat(10, 32px);
       position: relative;
       box-shadow: 0 0 15px 5px lightblue;
-
+      user-select: none;
       &-ship {
         border: 2px solid #00f;
         z-index: 2;
@@ -139,6 +139,10 @@
           &-hover {
             box-shadow: inset 0px 0px 10px rgb(157, 255, 0);
           }
+        }
+        &-destroyed {
+        }
+        &-marked {
         }
       }
     }
