--- a/src/sass/_gameboard.scss
+++ b/src/sass/_gameboard.scss
@@ -129,9 +129,11 @@
       }
       &-cell {
         border: solid 1px black;
+        font-family: 'Iceland', Roboto, sans-serif;
         cursor: crosshair;
         background: #f1f3f5;
         transition: 100ms ease-in-out;
+        @include center-align();
         &-placement {
           border: solid 1px black;
           background: #f1f3f5;
@@ -140,13 +142,26 @@
             box-shadow: inset 0px 0px 10px rgb(157, 255, 0);
           }
         }
-        &-destroyed {
-        }
-        &-marked {
-        }
       }
     }
   }
+}
+
+.destroyed {
+  border: solid 1px black;
+  background: rgba(221, 66, 66, 1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: black;
+  font-size: 30px;
+  z-index: 10;
+}
+.marked {
+  border: solid 1px black;
+  background: transparent;
+  color: white;
+  font-size: 22px;
 }
 
 .enemy {
