--- a/src/sass/_gameboard.scss
+++ b/src/sass/_gameboard.scss
@@ -120,7 +120,7 @@
         z-index: 2;
         cursor: move;
         position: absolute;
-        background: linear-gradient(315deg, #2a2a72 10%, #009ffd 74%);
+        background: rgba(6, 2, 255, 0.2);
         transition: all 0.3s;
         &-dragging {
           opacity: 0.5;
@@ -159,8 +159,8 @@
 }
 .marked {
   border: solid 1px black;
-  background: transparent;
-  color: white;
+  background: rgb(212, 212, 212);
+  color: black;
   font-size: 22px;
 }
 
