--- a/src/sass/_gameboard.scss
+++ b/src/sass/_gameboard.scss
@@ -140,6 +140,9 @@
           transition: 100ms ease-in-out;
           &-hover {
             box-shadow: inset 0px 0px 10px rgb(157, 255, 0);
+            &-red {
+              box-shadow: inset 0px 0px 10px rgb(255, 0, 34);
+            }
           }
         }
       }
